--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
+    "@heroicons/react": "^2.1.1",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cookie": "^1.0.2",
@@ -18,12 +18,15 @@
     "heroicons": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.474.0",
     "mysql2": "^3.12.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-force-graph": "^1.46.0",
     "react-force-graph-2d": "^1.27.0",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "vis-network": "^9.1.9"
   },
   "devDependencies": {
     "postcss": "^8",
