fixed logout index, added temporary function for search, design for filter section

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-MYSQL_HOST=mysql-191746-0.cloudclusters.net
-MYSQL_PORT=10230
+MYSQL_HOST=mysql-192163-0.cloudclusters.net
+MYSQL_PORT=10075
 MYSQL_USER=admin
-MYSQL_PASSWORD=i040KJKw
+MYSQL_PASSWORD=S6MBE72A
 MYSQL_DATABASE=quest2go
 SESSION_SECRET=your_session_secret
 JWT_SECRET=your_jwt_secret_here
