--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-slider": "^1.2.3",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "d3": "^7.9.0",
     "framer-motion": "^12.0.6",
@@ -27,6 +30,8 @@
     "react-force-graph-2d": "^1.27.0",
     "react-graph-vis": "^1.0.7",
     "reactflow": "^11.11.4",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "vis-network": "^9.1.9"
   },
   "devDependencies": {
