added temporary chat for users

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,8 @@
-MYSQL_HOST=mysql-192163-0.cloudclusters.net
-MYSQL_PORT=10075
+MYSQL_HOST=mysql-192606-0.cloudclusters.net
+MYSQL_PORT=10014
 MYSQL_USER=admin
-MYSQL_PASSWORD=S6MBE72A
+MYSQL_PASSWORD=JQno4p1b
 MYSQL_DATABASE=quest2go
 SESSION_SECRET=your_session_secret
 JWT_SECRET=your_jwt_secret_here
+TZ=Etc/GMT-8
