--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-MYSQL_HOST=mysql-192606-0.cloudclusters.net
-MYSQL_PORT=10014
+MYSQL_HOST=mysql-193027-0.cloudclusters.net
+MYSQL_PORT=10047
 MYSQL_USER=admin
-MYSQL_PASSWORD=JQno4p1b
+MYSQL_PASSWORD=4ZWHZLlh
 MYSQL_DATABASE=quest2go
 SESSION_SECRET=your_session_secret
 JWT_SECRET=your_jwt_secret_here
