--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-force-graph-2d": "^1.27.0",
     "react-graph-vis": "^1.0.7",
     "reactflow": "^11.11.4",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "vis-network": "^9.1.9"
