--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.1",
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
@@ -21,11 +21,13 @@
     "d3": "^7.9.0",
     "framer-motion": "^12.0.6",
     "heroicons": "^2.2.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "mysql2": "^3.12.0",
     "next": "15.1.6",
+    "npm": "^10.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-force-graph": "^1.46.0",
