modified profile and env file

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-MYSQL_HOST=mysql-193374-0.cloudclusters.net
-MYSQL_PORT=19576
+MYSQL_HOST=mysql-193880-0.cloudclusters.net
+MYSQL_PORT=18998
 MYSQL_USER=admin
-MYSQL_PASSWORD=gGIXwzd2
+MYSQL_PASSWORD=xKOTwDfH
 MYSQL_DATABASE=quest2go
 SESSION_SECRET=your_session_secret
 JWT_SECRET=your_jwt_secret_here
