--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-MYSQL_HOST=mysql-194434-0.cloudclusters.net
-MYSQL_PORT=19064
+MYSQL_HOST=mysql-194789-0.cloudclusters.net
+MYSQL_PORT=10059
 MYSQL_USER=admin
-MYSQL_PASSWORD=WdBwDSR3
+MYSQL_PASSWORD=yXEFvs7e
 MYSQL_DATABASE=quest2go
 SESSION_SECRET=your_session_secret
 JWT_SECRET=your_jwt_secret_here
