--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-MYSQL_HOST=mysql-194789-0.cloudclusters.net
-MYSQL_PORT=10059
+MYSQL_HOST=mysql-195283-0.cloudclusters.net
+MYSQL_PORT=10034
 MYSQL_USER=admin
-MYSQL_PASSWORD=yXEFvs7e
+MYSQL_PASSWORD=hkfc2vHd
 MYSQL_DATABASE=quest2go
 SESSION_SECRET=your_session_secret
 JWT_SECRET=your_jwt_secret_here
