--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-force-graph-2d": "^1.27.0",
     "react-graph-vis": "^1.0.7",
     "reactflow": "^11.11.4",
+    "reagraph": "^4.22.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
