--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-MYSQL_HOST=mysql-195857-0.cloudclusters.net
-MYSQL_PORT=10041
+MYSQL_HOST=mysql-196215-0.cloudclusters.net
+MYSQL_PORT=10006
 MYSQL_USER=admin
-MYSQL_PASSWORD=OIn9Jvbf
+MYSQL_PASSWORD=cWjYW514
 MYSQL_DATABASE=quest2go
 SESSION_SECRET=your_session_secret
 JWT_SECRET=your_jwt_secret_here
