--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-MYSQL_HOST=mysql-196489-0.cloudclusters.net
-MYSQL_PORT=10047
+MYSQL_HOST=mysql-196847-0.cloudclusters.net
+MYSQL_PORT=10317
 MYSQL_USER=admin
-MYSQL_PASSWORD=OqXLRMAg
+MYSQL_PASSWORD=kdFpX7WJ
 MYSQL_DATABASE=quest2go
 SESSION_SECRET=your_session_secret
 JWT_SECRET=your_jwt_secret_here
