--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-MYSQL_HOST=mysql-197571-0.cloudclusters.net
-MYSQL_PORT=10018
+MYSQL_HOST=mysql-197978-0.cloudclusters.net
+MYSQL_PORT=10349
 MYSQL_USER=admin
-MYSQL_PASSWORD=PpRiFZWZ
+MYSQL_PASSWORD=p3le9XJY
 MYSQL_DATABASE=quest2go
 SESSION_SECRET=your_session_secret
 JWT_SECRET=your_jwt_secret_here
