--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-MYSQL_HOST=mysql-197978-0.cloudclusters.net
-MYSQL_PORT=10349
+MYSQL_HOST=mysql-198219-0.cloudclusters.net
+MYSQL_PORT=13143
 MYSQL_USER=admin
-MYSQL_PASSWORD=p3le9XJY
+MYSQL_PASSWORD=JsdqqWF7
 MYSQL_DATABASE=quest2go
 SESSION_SECRET=your_session_secret
 JWT_SECRET=your_jwt_secret_here
