--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-MYSQL_HOST=mysql-198219-0.cloudclusters.net
-MYSQL_PORT=13143
+MYSQL_HOST=mysql-199080-0.cloudclusters.net
+MYSQL_PORT=10018
 MYSQL_USER=admin
-MYSQL_PASSWORD=JsdqqWF7
+MYSQL_PASSWORD=qCZxNcoy
 MYSQL_DATABASE=quest2go
 SESSION_SECRET=your_session_secret
 JWT_SECRET=your_jwt_secret_here
