--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-MYSQL_HOST=mysql-199080-0.cloudclusters.net
-MYSQL_PORT=10018
+MYSQL_HOST=mysql-199553-0.cloudclusters.net
+MYSQL_PORT=16346
 MYSQL_USER=admin
-MYSQL_PASSWORD=qCZxNcoy
+MYSQL_PASSWORD=PBmRp5e1
 MYSQL_DATABASE=quest2go
 SESSION_SECRET=your_session_secret
 JWT_SECRET=your_jwt_secret_here
